fixed scrollbar and table

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,11 +151,11 @@ table select option{
     margin:4px;
     width:126px;
 }
-.tab-pane tr span{
+/* .tab-pane tr span{
     color:rgb(163, 163, 163);
-}
+} */
 .form-select.form-select-solid ,.form-control.form-control-solid{
-    background-color: var(--bs-gray-400);
+    background-color: var(--bs-gray-300);
 }
 /* start home page */
 .overall-leftbar{
@@ -179,11 +179,16 @@ table select option{
     margin-left: 13em;
   }
   
-  .currency_detail > table > * > tr > th:first-child,
-  .currency_detail > table > * > tr > td:first-child {
+  .currency_detail > table > * > tr > th:first-child{
     position: absolute;
     width: 14em;
     margin-left: -14em;
+    background-color: var(--bs-gray-100);
+  }
+  .currency_detail > table > * > tr > td:first-child {
+    position: absolute;
+    width: 15em;
+    margin-left: -15em;
     background-color: var(--bs-gray-100);
   }
   
@@ -192,6 +197,27 @@ table select option{
     /* Without this, if a cell wraps onto two lines, the first column
      * will look bad, and may need padding. */
     white-space: nowrap;
+  }
+  /* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--bs-gray-700); 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--bs-gray-500); 
   }
 /* end home page */
 /* dark mode */
